--- a/Assignment 3/case 1/10_position_ex1.html
+++ b/Assignment 3/case 1/10_position_ex1.html
@@ -33,7 +33,7 @@
             right: 0;
             bottom: 0;
         }
-        .squire>div {
+        .squire>div {                         /*lokuma kotu 4 mada thiyena white circles 4..*/
             width: 30%;
             aspect-ratio: 1/1;
             background-color: white;
@@ -46,7 +46,7 @@
             bottom: 0;
             margin: auto;
         }
-        .squire>div>div {
+        .squire>div>div {                       /*lokuma kotu 4 mada thiyena white circles 4 mada thiyena red squire 4.. */
             width: 40%;
             aspect-ratio: 1/1;
             background-color: red;
@@ -59,7 +59,7 @@
             margin: auto;
         }
 
-        .mid-squire {
+        .mid-squire {                        /*hari mada thiyena white squire eka...*/
             width: 15vw;
             background-color: white;
             aspect-ratio: 1/1;
@@ -71,7 +71,7 @@
             left: 0;
             margin: auto;
         }
-        .mid-squire>div {
+        .mid-squire>div {                      /*hari mada thiyena red circle eka...*/
             width: 60%;
             aspect-ratio: 1/1;
             background-color: red;
@@ -85,7 +85,7 @@
             margin: auto;
         }
 
-        .corner {
+        .corner {                              /*meken thama ain wala thiyena all circles hadanne*/
             width: 10vw;
             aspect-ratio: 1/1;
             background-color: white;
@@ -134,16 +134,22 @@
         <div></div>
     </div>
 </div>
+
+
 <div class="squire">
     <div>
         <div></div>
     </div>
 </div>
+
+
 <div class="squire">
     <div>
         <div></div>
     </div>
 </div>
+
+
 <div class="squire">
     <div>
         <div></div>
