--- a/Assignment 3/case 2/10_position_ex2.html
+++ b/Assignment 3/case 2/10_position_ex2.html
@@ -16,12 +16,10 @@
 
         }
 
-        header {
+        header {                               /*meken thama full header eke height & width theeranaya karanne... */
             position: relative;
             width: 100vw;
             height: 60px;
-            /*padding: 10px;*/
-            /*box-sizing: border-box;*/
         }
 
         header>img {
@@ -29,7 +27,7 @@
             top: 0;
             bottom: 0;
 
-            left: 10px;
+            left: 10px;                 /*left side eke idan kochchara ida pramanayak arinn onada kiyala...*/
 
             margin: auto;
         }
@@ -56,8 +54,6 @@
             background-color: darkgray;
             text-align: center;
             color: white;
-            /*padding-top: 20px;*/
-            /*padding-bottom: 20px;*/
             padding: 20px 0px;
         }
 
