--- a/Assignment 3/case 6/11_grid_2.html
+++ b/Assignment 3/case 6/11_grid_2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Grid Layout</title>
 
-  <link rel="stylesheet" href="assets/normalize.css">
+  <link rel="stylesheet" href="../assets/normalize.css">
 
   <style>
 
